--- a/preambolo.sty
+++ b/preambolo.sty
@@ -1,26 +1,24 @@
 \ProvidesPackage{preambolo}
 
-% Per pdflatex
-% \RequirePackage[T1]{fontenc}
-% \RequirePackage{textcomp}
-% \RequirePackage[utf8]{inputenc}
-% \RequirePackage[english,italian]{babel}
-% \RequirePackage{fourier}
-% \RequirePackage{microtype}
+\RequirePackage[T1]{fontenc}
+\RequirePackage{textcomp}
+\RequirePackage[utf8]{inputenc}
+\RequirePackage[english,italian]{babel}
+\RequirePackage{txfonts}
+\RequirePackage[scaled=0.89]{helvet}
+\RequirePackage[scaled]{beramono}
+\RequirePackage{microtype}
 
-% Per xelatex
-\RequirePackage{fontspec}
-  \setmainfont[Ligatures=TeX]{XITS}
-  \setsansfont{Myriad Pro}
-\RequirePackage{polyglossia}
-  \setdefaultlanguage{italian}
-
-\RequirePackage[margin=3.5cm]{geometry}
+\RequirePackage[%
+  a4paper,%
+  top=2.5cm,%
+  bottom=2.5cm,%
+  left=3cm,%
+  right=3cm,%
+]{geometry}
 \RequirePackage{array}
-\RequirePackage[grid]{multicol}
-\RequirePackage{indentfirst}
-\RequirePackage{pifont}
-\RequirePackage{guit}
+
+\RequirePackage{marvosym}
 \RequirePackage{graphicx}
 \RequirePackage{booktabs}
 \RequirePackage{xcolor}
@@ -29,7 +27,7 @@
 \setlength{\columnsep}{5ex}
 
 \RequirePackage[titles]{tocloft}
-\renewcommand{\cftdotsep}{3}
+\renewcommand{\cftdotsep}{3.5}
 \renewcommand{\cftsecdotsep}{\cftdotsep}
 
 \usepackage{fancyvrb}
@@ -37,24 +35,29 @@
   %xleftmargin=\the\parindent
 }
 
-\RequirePackage{csquotes}
-\RequirePackage[%
-  citestyle=authoryear-comp,%
-  backref,%
-  hyperref,%
-  backend=biber%
-]{biblatex}
+\RequirePackage[babel]{csquotes}
+\RequirePackage[backend=biber]{biblatex}
 \addbibresource{biblio.bib}
 
-\providecommand{\emacs}{Emacs}
-\providecommand{\auctex}{AUC\TeX{}}
-\providecommand{\mano}{\ding{43}}
+\newcommand{\titolo}{Una introduzione a GNU Emacs \& AUC\TeX{}}
+\newcommand{\autorea}{Orlando Iovino}
+\newcommand{\autoreb}{\textcolor{red}{Elrond}}   % manca nome e cognome
+\newcommand{\autorec}{\textcolor{red}{matteo.l}} % manca nome e cognome
+\newcommand{\autori}{\autorea, \autoreb, \autorec}
 
-\providecommand{\titolo}{Una introduzione a GNU Emacs \& AUC\TeX{}}
-\providecommand{\autorea}{Orlando Iovino}
-\providecommand{\autoreb}{\textcolor{red}{Elrond}}   % manca nome e cognome
-\providecommand{\autorec}{\textcolor{red}{matteo.l}} % manca nome e cognome
-\providecommand{\autori}{\autorea, \autoreb, \autorec}
+\RequirePackage[unicode]{hyperref}
+\hypersetup{%
+  pdftitle  ={\titolo},%
+  pdfauthor ={\autori},%
+  pdfsubject={Breve guida all'uso di GNU Emacs e AUCTeX per Windows,
+              GNU Linux e Mac OS},%
+  pdfcreator={LaTeX}%
+}
+
+
+\newcommand{\emacs}{Emacs}
+\newcommand{\auctex}{AUC\TeX{}}
+\newcommand{\sito}[2]{(\href{#1}{\Mundus\,\scshape#2})}
 
 \setcounter{secnumdepth}{1}
 \setcounter{tocdepth}{1}
@@ -66,15 +69,6 @@
 \dimfig=\wd\z@%
 \hangindent\dimfig\hangafter-2\relax
 \raisebox{-\baselineskip}[0pt][0pt]{\llap{\box\z@}}}
-
-\RequirePackage[unicode]{hyperref}
-\hypersetup{%
-  pdftitle={\titolo},
-  pdfauthor={\autori},
-  pdfsubject={Breve guida all'uso di GNU Emacs e AUCTeX per Windows,
-    GNU Linux e Mac OS},
-  pdfcreator={LaTeX}
-}
 
 %%% Local Variables:
 %%% mode: latex
