corretto un bug nella configurazione di AUCTeX per lavorare con Skim

--- a/main.tex
+++ b/main.tex
@@ -245,12 +245,12 @@ displayline %n %o %b")
       '(((output-dvi style-pstricks) "dvips and Skim")
         (output-dvi "Skim")
         (output-pdf "Skim")
-        (output-html "open")))))
-\end{Verbatim}
+        (output-html "open")))
+\end{verbatim}
 Come visualizzatore principale si utilizza
 \href{http://skim-app.sourceforge.net/}{Skim} perché supporta la
 ricerca diretta e inversa dal pdf, i dettagli sulla configurazione di
-\emacs\ e Skim sono riportati nel paragrafo \ref{sec:fismac}.
+\emacs{} e Skim sono riportati nel paragrafo \ref{sec:fismac}.
 
 \section{Personalizzare \emacs{} \& \auctex} % titolo cambiato per avere un
 % effetto migliore nell'indice, ma in realtà non mi piace
