--- a/main.tex
+++ b/main.tex
@@ -43,8 +43,8 @@ procurandosi l'archivio che contiene gli eseguibili.
 Dal sito ufficiale di \emacs{} per Windows %
 \sito{http://ftp.gnu.org/pub/gnu/emacs/windows/}{\emacs\ for Windows} %
 si scarica l'archivio compresso %
-\href{http://ftp.gnu.org/pub/gnu/emacs/windows/emacs-23.1-barebin-i386.zip}
-{\textsf{emacs-23.1-barebin-i386.zip}} e lo si decomprime in una
+\href{http://ftp.gnu.org/pub/gnu/emacs/windows/emacs-23.4-barebin-i386.zip}
+{\textsf{emacs-23.4-barebin-i386.zip}} e lo si decomprime in una
 posizione di comodo; una buona soluzione, per esempio, è decomprimere
 il suddetto archivio in:
 \begin{Verbatim}
@@ -96,7 +96,7 @@ $ emacs
 \end{Verbatim}
 % $
 Se si desidera utilizzare \emacs{} con interfaccia testuale bisogna
-aggiungere l'opzione \verb|-nw| oppure \verb|--no-window-system|:
+aggiungere l'opzione \texttt{-nw} oppure \texttt{--no-window-system}:
 \begin{Verbatim}
 $ emacs -nw
 \end{Verbatim}
@@ -161,7 +161,7 @@ C:/Programmi/emacs/
 Sia nell'archivio di \auctex{}, che quello di \emacs, posizionato in
 precedenza nel percorso suddetto, vi è una cartella dal nome
 \texttt{site-lisp}: i file contenuti in queste cartelle vanno uniti in
-una sola cartella. 
+una sola cartella.
 
 \subsection{\auctex{} per GNU/Linux}
 \label{sec:auctexlinux}
@@ -241,12 +241,12 @@ file creati con \LaTeX{} scrivendo nel file \emph{.emacs} queste righe
 displayline %n %o %b")
         ("open" "open %o")))
 
-(setq TeX-view-program-selection 
+(setq TeX-view-program-selection
       '(((output-dvi style-pstricks) "dvips and Skim")
         (output-dvi "Skim")
         (output-pdf "Skim")
         (output-html "open")))
-\end{verbatim}
+\end{Verbatim}
 Come visualizzatore principale si utilizza
 \href{http://skim-app.sourceforge.net/}{Skim} perché supporta la
 ricerca diretta e inversa dal pdf, i dettagli sulla configurazione di
@@ -291,9 +291,9 @@ la quale proporrà possibili soluzioni.
 \subsection{Windows}
 \label{sec:aspellwin}
 Per installare il correttore ortografico in ambiente Windows, si può
-usare il programma GNU Aspell 
+usare il programma GNU Aspell
 \sito{http://aspell.net/win32/}{GNU Aspell - Win32 version}. L'ultima
-versione stabile per Windows, seppur datata Dicembre 2002, è la 0.50-3. 
+versione stabile per Windows, seppur datata Dicembre 2002, è la 0.50-3.
 
 I file che bisogna procurarsi sono quelli che vengono di seguito
 riportati; si badi bene ad installarli nell'ordine in cui vengono
@@ -318,8 +318,8 @@ di Aspell nella \textsf{PATH} di Windows. Secondo, aggiungere al
 proprio \emph{.emacs} le seguenti righe di codice:
 
 \begin{Verbatim}
-(setq-default ispell-program-name "aspell") 
-(setq-default ispell-extra-args '("--reverse")) 
+(setq-default ispell-program-name "aspell")
+(setq-default ispell-extra-args '("--reverse"))
 (setq ispell-dictionary "italiano")
 \end{Verbatim}
 dove la seconda riga di codice serve a \emph{fixare} dei problemi con
@@ -331,7 +331,7 @@ le versioni precedenti.
 Il correttore ortografico GNU Aspell può essere installato facilmente
 su GNU/Linux utilizzando, come al solito, il gestore pacchetti della
 propria distribuzione. Il dizionario italiano di GNU Aspell si chiama
-\verb|aspell-it| quindi da terminale può essere installato in Debian
+\texttt{aspell-it} quindi da terminale può essere installato in Debian
 con il comando
 \begin{Verbatim}
 $ sudo apt-get install aspell-it
@@ -399,7 +399,7 @@ sistemi operativi, ma non solo, variano anche i visualizzatori che
 permettono tale funzione infatti in ambiente Windows, l'unico
 visualizzatore capace di fare questo è SumatraPDF,
 \textcolor{red}{in ambiente Linux si può usare [\ldots]}, mentre in
-ambiente Mac OS si usa Skim. 
+ambiente Mac OS si usa Skim.
 
 \subsection{Ricerca diretta-inversa su Windows}
 \label{sec:fiswin}
@@ -437,11 +437,11 @@ diretta-inversa e fornito un modo per accedervi;
 \end{enumerate}
 
 A queste operazioni segue la configurazione di SumatraPDF e di \emacs,
-mediante il proprio file \emph{.emacs}. 
+mediante il proprio file \emph{.emacs}.
 
 Per la ricerca inversa si deve aprire SumatraPDF, andare in
 \texttt{Impostazioni} e quindi scegliere \texttt{Opzioni...} e
-digitare la riga 
+digitare la riga
 \begin{Verbatim}
 C:/Programmi/emacs/bin/emacsclientw.exe +%l "%f"
 \end{Verbatim}
@@ -451,7 +451,7 @@ Per la ricerca diretta si deve scaricare lo script
 sumatra-forward %
 \sito{http://william.famille-blum.org/software/sumatra/sumatra-forward.el}
 {sumatra-forward.el} %
-e copiarlo in una cartella accessibile a \emacs{} per esempio 
+e copiarlo in una cartella accessibile a \emacs{} per esempio
 \begin{Verbatim}
 C:/Programmi/emacs/bin/site-lisp
 \end{Verbatim}
@@ -467,7 +467,7 @@ Fatto questo resta da far capire a \emacs{} che si vuole la ricera
 diretta inversa, e per farlo si possono scrivere nel proprio
 \emph{.init} file, le seguenti righe:
 \begin{Verbatim}
-(setq TeX-source-correlate-method (quote synctex)) 
+(setq TeX-source-correlate-method (quote synctex))
 (setq TeX-source-correlate-mode t)
 (setq TeX-source-correlate-start-server t)
 \end{Verbatim}
@@ -621,16 +621,16 @@ semplice potrebbe essere il seguente:
 skeleton into current buffer.  This only makes sense for empty
 buffers."  "Destinatario: "
 "\\documentclass[a4paper,10pt]{letter}\n"
-"\\usepackage[T1]{fontenc}\n" 
+"\\usepackage[T1]{fontenc}\n"
 "\\usepackage[utf8]{inputenc}\n"
-"\\usepackage[italian]{babel}\n" 
+"\\usepackage[italian]{babel}\n"
 "\\name{Pinco Pallino}\n"
 "\\address{Via Marco Polo 32\\\\ Napoli 80100\\\\ Italy}\n"
-"\\begin{document}\n" 
-"\\begin{letter}{" str | " *** Destinatario  *** " "}\n" 
-"\\opening{" _ "}\n\n" 
+"\\begin{document}\n"
+"\\begin{letter}{" str | " *** Destinatario  *** " "}\n"
+"\\opening{" _ "}\n\n"
 "\\closing{Cordialmente}\n"
-"\\end{letter}\n" 
+"\\end{letter}\n"
 "\\end{document}\n")
 \end{Verbatim}
 
@@ -685,7 +685,7 @@ computer dovrebbero esserci anche i sorgenti pronti per essere
 compilati.
 
 \begin{figure}[t]
- \centering 
+ \centering
  \unitlength=0.005\textwidth
  \begin{picture}(200,120)
   \put(0,0){\framebox(94,120){%
@@ -707,7 +707,7 @@ compilati.
 \textcolor{red}{\lipsum[1]}
 
 \clearpage
-\phantomsection 
+\phantomsection
 \addcontentsline{toc}{section}{\bibname}
 \nocite{*}
 \printbibliography
@@ -727,10 +727,10 @@ reperibile sul sito ufficiale
      {CC By-Nc-Sa}.
 \end{document}
 
-%%% Local Variables: 
+%%% Local Variables:
 %%% mode: latex
 %%% coding: utf-8
 %%% TeX-master: t
-%%% End: 
+%%% End:
 
 % LocalWords:  mirror OS For dmg
