inizio paragrafo sulle personalizzazioni

--- a/preambolo.sty
+++ b/preambolo.sty
@@ -44,7 +44,7 @@
 
 \newcommand{\titolo}{Una introduzione a GNU Emacs \& AUC\TeX{}}
 \newcommand{\autorea}{Orlando Iovino}
-\newcommand{\autoreb}{\textcolor{red}{Elrond}}   % manca nome e cognome
+\newcommand{\autoreb}{Mosè Giordano}
 \newcommand{\autorec}{\textcolor{red}{matteo.l}} % manca nome e cognome
 \newcommand{\autori}{\autorea, \autoreb, \autorec}
 
