--- a/main.tex
+++ b/main.tex
@@ -256,7 +256,144 @@ ricerca diretta e inversa dal pdf, i dettagli sulla configurazione di
 % effetto migliore nell'indice, ma in realtà non mi piace
 \label{sec:personal}
 
-\textcolor{red}{\lipsum[1]}
+Una delle caratteristiche principali di \emacs{}
+è che è un editor di testo personalizzabile in ogni suo aspetto ed espandibile,
+in modo da renderlo adatto alle proprie esigenze.  In questo paragrafo vedremo
+alcune delle personalizzazioni che possono risultare utili quando si lavora con
+documenti \LaTeX{}.
+
+Per modificare le impostazioni relative alla gestione nativa di \TeX{}
+da parte di \emacs{}
+è possibile usare la funzione \texttt{M-x customize-group RET tex RET}.  In
+questo modo si aprirà un buffer nel quale sarà possibile modificare, tramite
+l'interfaccia, le opzioni desiderate.  Per modificare in particolare \auctex{}
+è possibile usare la funzione \texttt{M-x customize-group RET AUCTeX RET}.
+
+Di seguito saranno suggerite alcune porzioni di codice che permettono di
+personalizzare \emacs{}
+e che vanno inserite nel file di inizializzazione
+\texttt{\textasciitilde/.emacs}.  Per rendere effettive le modifiche bisogna
+riavviare \emacs{}.
+
+Se si usa \auctex{},
+è possibile inserire macro nei propri documenti \LaTeX{}
+con \texttt{C-c RET}.  La comodità di questa funzione è che \auctex{}
+conosce le macro dei principali pacchetti \LaTeX{}
+e permette quindi l'autocompletamento con il tasto TAB.  Inoltre conosce gli
+argomenti e le opzioni che queste macro accettano, infatti usando
+\texttt{C-c RET frac RET} nel documento si otterrà
+\texttt{\textbackslash{}frac\{\}\{\}} e il cursore si posizionerà all'interno
+del primo paio di parentesi graffe.  Allo stesso modo, usando
+\texttt{C-c RET sqrt RET} verrà richiesto l'ordine \texttt{n} della radice da
+inserire (premere direttamente \texttt{RET} per non inserire nulla) e si otterrà
+\texttt{\textbackslash{}sqrt[n]\{\}}.  Per fare in modo che \auctex{}
+conosca quali pacchetti \LaTeX{}
+sono stati caricati bisogna permettergli di effettuare il parsing dei propri
+documenti e questo è possibile aggiungendo nel proprio file \texttt{.emacs} il
+seguente codice
+\begin{Verbatim}
+(setq TeX-parse-self t) ; Attiva parsing al caricamento.
+(setq TeX-auto-save t) ; Attiva parsing al salvataggio.
+\end{Verbatim}
+In questo modo verrà creata una cartella chiamata \texttt{auto} nella stessa
+directory in cui si trova il documento nella quale verranno registrate le
+informazioni relative al proprio documento \LaTeX{},
+se non si desidera affollamento nelle proprie cartelle si potrebbe non voler
+attivare queste due opzioni.
+
+Come detto, \auctex{}
+conosce le macro dei pacchetti principali, ma naturalmente non conosce tutte i
+pacchetti.  Possiamo, però, fargli conoscere delle macro aggiuntive da
+utilizzare solo quando viene caricato nel documento \LaTeX{}
+il pacchetto che fornisce le relative macro.  Per esempio, \auctex{}
+non conosce le macro messe a disposizione dal pacchetto \texttt{siunitx}.  Con
+il seguente codice da aggiungere nel file \texttt{.emacs} apprenderà che questo
+pacchetto fornisce i comandi \texttt{SI}, \texttt{si} e \texttt{num} di cui il
+primo accetta due argomenti, gli ultimi due solo uno:
+\begin{Verbatim}
+(eval-after-load "tex"
+  '(TeX-add-style-hook
+    "siunitx"
+    (lambda ()
+      (TeX-add-symbols
+       '("SI"  2)
+       '("si"  1)
+       '("num" 1)))))
+\end{Verbatim}
+A volte in un documento \LaTeX{}
+non si carica un certo pacchetto \texttt{A} poiché è automaticamente caricato da
+un altro pacchetto \texttt{B} che viene esplicitamente caricato.  In questi
+casi, però, \auctex{}
+potrebbe non rendersi conto che il pacchetto \texttt{A} è stato effettivamente
+caricato e non fornirebbe le funzioni di autocompletamento per le macro del
+pacchetto \texttt{A}, se è uno di quelli supportati.  Per ovviare a questo
+problema è possibile inserire il seguente codice nel file di inizializzazione
+\begin{Verbatim}
+(eval-after-load "tex"
+  '(TeX-add-style-hook
+    "B"
+    (lambda ()
+      (TeX-run-style-hooks "B"))))
+\end{Verbatim}
+Per esempio, il pacchetto \texttt{kpfonts} carica automaticamente il pacchetto
+\texttt{amsmath} e non è quindi necessario inserire nel proprio sorgente
+\LaTeX{}
+l'istruzione \texttt{\textbackslash{}usepackage\{amsmath\}}.  Per far sapere ad
+\auctex{} questa situazione si userà il codice
+\begin{Verbatim}
+(eval-after-load "tex"
+  '(TeX-add-style-hook
+    "kpfonts"
+    (lambda ()
+      (TeX-run-style-hooks "amsmath"))))
+\end{Verbatim}
+
+Se si è soliti suddividere i propri documenti \LaTeX{}
+in più file da includere nel file principale con i comandi
+\texttt{\textbackslash{}input} o \texttt{\textbackslash{}include} può essere
+utile aggiungere al file \texttt{.emacs}
+\begin{Verbatim}
+(setq-default TeX-master nil)
+\end{Verbatim}
+In questo modo, all'apertura dei documenti \LaTeX{}
+\emacs{}
+chiederà qual è il file principale associato e sul quale saranno eseguiti i
+comandi di compilazione.
+
+Se si usa spesso \LaTeX{}
+per comporre documenti matematici potrebbe essere utile attivare la modalità
+\texttt{LaTeX-math-mode} con \texttt{C-c \textasciitilde} oppure con il comando
+\texttt{M-x LaTeX-math-mode}.  In questo modo, per esempio, per inserire il
+simbolo \texttt{\textbackslash{}alpha} si potrà usare la scorciatoia
+\texttt{` a}.  L'elenco delle altre scorciatoie per inserire i simboli può
+essere consultato dal menu \texttt{Math} nella barra dei menu.  Per attivare
+automaticamente questa modalità ogni volta che si apre un documento \LaTeX{}
+bisogna aggiungere
+\begin{Verbatim}
+(add-hook 'TeX-mode-hook 'LaTeX-math-mode)
+\end{Verbatim}
+al proprio \texttt{.emacs}.
+
+Il codice
+\begin{Verbatim}
+(setq TeX-electric-sub-and-superscript t)
+\end{Verbatim}
+aggiunto al proprio \texttt{.emacs}, permette di inserire automaticamente una
+coppia di parentesi graffe \texttt{\{\}} quando si scrivono i simboli
+\texttt{\_} e \texttt{\textasciicircum} in modalità matematica.
+
+Normalmente, quando si preme \texttt{RET} in un sorgente \LaTeX{}
+viene semplicemente aggiunta una nuova linea.  Se si vuole che andando a capo la
+nuova linea sia automaticamente indentata bisogna premere \texttt{C-j} invece di
+\texttt{RET}.  Si può però fare in modo che si ottenga questo risultato anche
+premendo normalmente \texttt{RET} aggiungendo il seguente codice al file di
+inizializzazione
+\begin{Verbatim}
+(setq TeX-newline-function 'newline-and-indent)
+\end{Verbatim}
+Se si mette \texttt{reindent-then-newline-and-indent} al posto di
+\texttt{'newline-and-indent} si avrà, in più, l'effetto che la riga attuale
+viene indentata.
 
 \section{Correttore ortografico}
 \label{sec:corr}
