--- a/preambolo.sty
+++ b/preambolo.sty
@@ -23,6 +23,21 @@
 \RequirePackage{graphicx}
 \RequirePackage{booktabs}
 \RequirePackage{xcolor}
+\RequirePackage{eso-pic}
+\renewcommand\AtPageLowerLeft[1]{\AtPageUpperLeft{%
+ \put(0,\LenToUnit{-0.99\paperheight}){#1}}}
+
+\AddToShipoutPictureBG{%
+  \AtPageLowerLeft{%
+    \rotatebox{90}{%
+      \parbox[][5ex][c]{\paperwidth}{%
+        \textcolor{red}{\Large\sffamily%
+          \titolo: \autorea, \autoreb, \autorec\ --- BOZZA:~\the\year%
+        }%
+      }%
+    }%
+  }%
+}%
 
 \RequirePackage[grid]{multicol}
 \setlength{\columnsep}{3.5ex}
@@ -48,7 +63,7 @@
 \newcommand{\autorec}{\textcolor{red}{matteo.l}} % manca nome e cognome
 \newcommand{\autori}{\autorea, \autoreb, \autorec}
 
-\RequirePackage[unicode]{hyperref}
+\RequirePackage[linktocpage=true]{hyperref}
 \hypersetup{%
   pdftitle  ={\titolo},%
   pdfauthor ={\autori},%
